Fix snapshot title truncation (#122)
* Fix snapshot title truncation

* Update line-height for snapshot title to normal

* Add g to test snapshot names

--- a/app/styles/components/_snapshot_viewer.sass
+++ b/app/styles/components/_snapshot_viewer.sass
@@ -72,7 +72,7 @@
   .SnapshotViewer-title
     flex: 0 1 auto
     width: calc(100% - 125px)  // 100% - width of details.
-    line-height: 1em
+    line-height: normal
 
     a
       display: inline-block
